tests/lean/holeErrors.lean.expected.out
holeErrors.lean:3:11-3:20: error: failed to infer definition type
holeErrors.lean:3:14-3:20: error: don't know how to synthesize implicit argument
  @id ?m
context:
⊢ Sort u
holeErrors.lean:5:9-5:10: error: failed to infer definition type
when the resulting type of a declaration is explicitly provided, all holes (e.g., `_`) in the header are resolved before the declaration body is processed
holeErrors.lean:8:4-8:5: error: failed to infer 'let' declaration type
holeErrors.lean:8:9-8:15: error: don't know how to synthesize implicit argument
  @id ?m
context:
⊢ Sort u
holeErrors.lean:7:11-9:1: error: failed to infer definition type
holeErrors.lean:11:11-11:15: error: failed to infer definition type
holeErrors.lean:11:8-11:9: error: failed to infer binder type
holeErrors.lean:13:12-13:13: error: failed to infer binder type
holeErrors.lean:13:15-13:19: error: failed to infer definition type
holeErrors.lean:16:4-16:5: error: failed to infer binder type
holeErrors.lean:15:7-16:10: error: failed to infer definition type
holeErrors.lean:19:13-19:19: error: don't know how to synthesize implicit argument
  @id ?m
context:
⊢ Sort u
holeErrors.lean:19:8-19:9: error: failed to infer 'let rec' declaration type
